// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeEither() fails when object is a left 1`] = `
"expect(received).not.toBeEither()

Unexpected Either, received:
  {"_tag": "Left", "left": false}"
`;

exports[`.not.toBeEither() fails when object is a right 1`] = `
"expect(received).not.toBeEither()

Unexpected Either, received:
  {"_tag": "Right", "right": false}"
`;

exports[`.toBeEither() fails when object is not an Either 1`] = `
"expect(received).toBeEither()

Expected Either, received:
  true"
`;

exports[`.toBeEither() fails when object is undefined 1`] = `
"expect(received).toBeEither()

Expected Either, received:
  undefined"
`;
